Versjon 5 og noen rettelser i tidligere versjoner.