@@ -1,7 +1,6 @@
 package javafx.chess.v1;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import javafx.fxml.FXML;
@@ -12,7 +11,7 @@ public class ChessController {
 
 	List<Piece> allPieces = new ArrayList<>();
 
-	List<String> startPieces = Arrays.asList(
+	List<String> startPieces = List.of(
 			"Ra8♜", "Nb8♞", "Bc8♝", "Qd8♛", "Ke8♚", "Bf8♝", "Ng8♞", "Rh8♜",
 			"Pa7♟", "Pb7♟", "Pc7♟", "Pd7♟", "Pe7♟", "Pf7♟", "Pg7♟", "Ph7♟",
 			"Pa2♙", "Pb2♙", "Pc2♙", "Pd2♙", "Pe2♙", "Pf2♙", "Pg2♙", "Ph2♙",
